# image2promptprogam

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  EVAL_STORAGE_SCHEMA.md  README.md  check_eval_storage.py  gemini3.1pro-program.md  gpt5.5-program.md  opus4.7-program.md  prepare_agent_task.sh  prompts  pyproject.toml  single-prompt-opus-4.7.txt  storage_backend.py  sync_runs_to_gcs.py  view_eval_results.py
exp_implementation/opus4.7_gpt5.5_local_layout_smoke/: .env.example  .gitignore  CLAUDE.md  EVAL_STORAGE_SCHEMA.md  IMPLEMENTATION.md  README.md  cache  check_eval_storage.py  embed_and_score.py  eval_images  harness.py  kickoff-prompt.txt  logbook.md  program.md  prompt_strategy.py  pyproject.toml  val_images
exp_implementation/opus4.7_gpt5.5_local_layout_smoke/eval_data/images/: manifest.json
gemini3.1pro/: IMPLEMENTATION.md  autoresearch-kickoff-prompt.txt  kickoff-prompt.txt  program.md  single-repro-prompt.txt
gpt5.5/: IMPLEMENTATION.md  autoresearch-kickoff-prompt.txt  kickoff-prompt.txt  program.md  single-repro-prompt.txt
opus4.7/: IMPLEMENTATION.md  autoresearch-kickoff-prompt.txt  kickoff-prompt.txt  program.md  single-repro-prompt.txt
scripts/: build_demo_fixture.py  capture_viewer_screenshots.sh  deploy_cloud_run.sh  render_screenshots.py
tests/: _fixtures.py  _gcs_stub.py  test_check_eval_storage.py  test_sync_runs_to_gcs.py  test_view_eval_results.py
